--- a/style.css
+++ b/style.css
@@ -239,3 +239,10 @@ h1, h2{
     line-height: 30px;
     text-align: center;
 }
+
+.contador{
+    text-align: center;
+    font-size: 17px;
+    color: #333;
+    margin-bottom: 25px;
+}
