--- a/style.css
+++ b/style.css
@@ -246,3 +246,21 @@ h1, h2{
     color: #333;
     margin-bottom: 25px;
 }
+
+.apertarTecla{
+    animation: apertar 0.1s;
+    position: relative;
+}
+
+@keyframes apertar {
+    from {
+        box-shadow: 1px 1px rgb(0, 0, 0, 0.5);
+        top: 0;
+        left: 0;
+    } 
+    to {
+        box-shadow: 0px 0px rgb(0, 0, 0, 0.5);
+        top: 1px;
+        left: 1px;
+    }
+}
